objects/Checklist_Answer__c.object
<CustomObject>
    <description>Captures the response for an Item to the respective Checklist and associated with a Project.</description>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Discovery Checklist Answers</relationshipLabel>
        <relationshipName>Checklist_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Category_Items__c</fullName>
        <formula>Item__r.Item_Category__r.Number_of_Checklist_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Category Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Checklist__c</fullName>
        <label>Project Checklist</label>
        <referenceTo>Project_Checklist__c</referenceTo>
        <relationshipName>Checklist_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_Location__c</fullName>
        <inlineHelpText>Direct link to file or folder containing document item.</inlineHelpText>
        <label>URL Location</label>
        <type>Url</type>
    </fields>
    <label>Discovery Checklist Answer</label>
    <nameField>
        <displayFormat>CLA-{000000000}</displayFormat>
        <label>Checklist Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Checklist Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>